...
import kotlinx.coroutines.flow.Flow
import kotlinx.coroutines.flow.map

val Context.dataStore: DataStore<Preferences> by preferencesDataStore(name = "settings")

enum class TextSize {
    Small, Medium, Large
}

enum class AppFont {
    Default, Serif, Monospace
}

enum class ViewType {
    HeadlinesOnly, Tile
}

...
