...
            DailyPlanetTheme {
                val navController = rememberNavController()
                val navBackStackEntry by navController.currentBackStackEntryAsState()
                val currentDestination = navBackStackEntry?.destination

                val items = listOf(
                    BottomNavItem("Home", Icons.Default.Home, "home"),
                    BottomNavItem("Search", Icons.Default.Search, "search"),
                    BottomNavItem("Favorites", Icons.Default.Favorite, "favorites"),
                    BottomNavItem("Settings", Icons.Default.Settings, "settings")
                )

                Scaffold(
...
